@@ -1,2 +1,0 @@
-This is the Octave frontend for the Wcalc transmission
-line analysis/synthesis calculator.
